Fix blurry title text on notifications

--- a/res/provider/ui/css/base.css
+++ b/res/provider/ui/css/base.css
@@ -52,10 +52,6 @@ ul, li {
     overflow: scroll;
 }
 
-.group {
-    /* background: magenta; */
-}
-
 .close {
     border-radius: 18px;
     height: 18px;
@@ -81,7 +77,7 @@ ul, li {
     background-color: #2A2A30;
 }
 
-.group .title {
+.group .header .title {
     opacity: 0.5;
     font-size: 10px;
     font-weight: bold;
@@ -122,6 +118,7 @@ ul, li {
     background-color: #2A2A30;
     box-shadow: 0 2px 14px 0 rgba(24, 24, 42, 0.3);
     margin-bottom: 12px;
+    -webkit-font-smoothing: antialiased;
 }
 
 .notification-center .notification:hover {
@@ -196,13 +193,13 @@ ul, li {
 
 .notification .title {
     color: #FFFFFF;
-    font-size: 14px;
     margin-bottom: 3px;
     line-height: 18px;
     text-overflow: ellipsis;
     max-width: 250px;
     white-space: nowrap;
     overflow: hidden;
+    -webkit-font-smoothing: antialiased;
 }
 
 .notification .text {
